# advent-of-code-2021

./: .gitignore  Cargo.toml  advent-of-code-2021.sublime-project
day01/: Cargo.toml
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/src/: lib.rs  lines.rs  main.rs
day06/: Cargo.toml
day06/src/: lanternfish.rs  lib.rs  main.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/src/: lib.rs  main.rs
day_template/: Cargo.toml
day_template/src/: lib.rs  main.rs
