[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Cooper <cooper.joseph@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
	"day01",
	"day02",
	"day03",
	"day04",
	"day05",
	"day06",
	"day07",
	"day08",
####
]
